# Softnix-Agentic-Agent

./: .dockerignore  .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml  testapi.py
deploy/: README.md  docker-compose.dev.yml  docker-compose.staging.yml
deploy/docker/: Dockerfile.backend  Dockerfile.frontend
deploy/env/: backend.dev.template  backend.prod.template  backend.staging.template  frontend.dev.template  frontend.prod.template  frontend.staging.template
docs/: core-memory-spec.md  scheduling-spec.md  telegram-gateway-spec.md  web-intelligence-fallback-spec.md
scripts/: benchmark_success_rate.sh  benchmark_tasks.txt  build_runtime_images.sh  test_core_memory_oneclick.sh  test_email_send.py  test_email_send_enhanced.py
skillpacks/get-saleorder/: SKILL.md
skillpacks/resend-email/: README.md  SKILL.md  skill.json
skillpacks/sample_skill/: SKILL.md
skillpacks/sendmail/: SKILL.md
skillpacks/tavily-search/: SKILL.md
skillpacks/web-intel/: SKILL.md
skillpacks/web-summary/: SKILL.md
src/softnix_agentic_agent/: cli.py  config.py  runtime.py  types.py
test_case/: test_tools.py
tests/api/: test_api_endpoints.py  test_schedule_api.py
tests/integration/: test_custom_provider_mock.py  test_run_and_resume.py
tests/safety/: test_executor_safety.py
tests/unit/: test_cli_defaults.py  test_cli_stdout_mode.py  test_config_env_loading.py  test_filesystem_store.py  test_loop.py  test_loop_memory.py  test_memory_service.py  (+15 more)
web-ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
(+55 files in other folders)
