[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softnix-agentic-agent"
version = "0.1.0"
description = "Softnix Agentic Agent: CLI-first autonomous agent with skills and multi-provider support"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Softnix" }]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
softnix = "softnix_agentic_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
